[metadata]
name = clenspy
author = J.H. Esteves
author_email = johnny.udi@gmail.com
description = Cluster Lesning Python - a package for cluster gravitational lensing analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/estevesjh/clenspy
project_urls =
    Bug Tracker = https://github.com/estevesjh/clenspy/issues
    Documentation = https://clenspy.readthedocs.io
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    matplotlib>=3.3.0
    astropy>=4.2.0

[options.packages.find]
where = .
include = src/clenspy*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    black
    flake8
all = 
    %(dev)s
